updated wrong guesses but still needs work

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -20,7 +20,12 @@
 
 }
 
-#game {
+p {
     font-weight: 30px;
     font-size: 36px;
+}
+
+#guessedLetters {
+    border-width: 15px;
+    border:red;
 }
